--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "book-store",
+  "name": "lib-front-end",
   "version": "0.0.0",
   "private": true,
-  "engines": {
-    "node": "12.x"
-  },
-  "main": "./bin/www",
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "echo \"Error: no test available\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "keywords": [
-    "nodejs",
-    "heroku",
-    "mongodb"
-  ],
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.10.13",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0"
+    "pug": "2.0.0-beta11"
   }
 }
